--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
             <div class="input-group">
                 <label>Password</label>
-                <input type="password" placeholder="Enter your password" required>
+                <input type="password" placeholder="Enter password" required>
             </div>
 
             <button type="submit" class="btn">Login</button>
